add add file functionality

--- a/djangocms/templates/management/addfile.html
+++ b/djangocms/templates/management/addfile.html
@@ -9,7 +9,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lembaga Air Perak - Ubah Data</title>
+    <title>Lembaga Air Perak - Tambah Data</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&amp;display=swap" rel="stylesheet">
@@ -95,7 +95,7 @@
                 </li>
 
 
-                <li class="menu single-menu">
+                <li class="menu single-menu active">
                     <a href="{% url 'addfile' %}">
                         <div class="">
                             <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
@@ -108,7 +108,6 @@
     </div>
     <!--  END TOPBAR  -->
 
-
     <!--  BEGIN CONTENT AREA  -->
     <div id="content" class="main-content container">
             <div class="form-content">
@@ -118,7 +117,7 @@
                             <div class="widget-header">
                                 <div class="row">
                                     <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                        <h4>Ubah Data ?</h4>
+                                        <h4>Tambah Data ?</h4>
                                     </div>                                                                        
                                 </div>
                             </div>
@@ -156,7 +155,7 @@
                                             </div>
                                         </div>
                                     </div>
-                                    <button type="submit" class="btn btn-primary mt-3">Selesai</button>
+                                    <button type="submit" class="btn btn-primary mt-3">Tambah File</button>
                                 </form>
                             </div>
                         </div>
