--- a/djangocms/templates/management/addfile.html
+++ b/djangocms/templates/management/addfile.html
@@ -109,8 +109,8 @@
     <!--  END TOPBAR  -->
 
     <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content container">
-            <div class="form-content">
+    <div id="content" class="main-content layout-px-spacing">
+            <div class="form-content layout-top-spacing layout-spacing">
                 <div class="row">
                     <div id="flFormsGrid" class="col-lg-12 layout-spacing">
                         <div class="statbox widget box box-shadow">
@@ -147,12 +147,10 @@
                                             {{ form.checkout_on }}
                                         </div>
                                     </div>
-                                    <div class="form-group">
-                                        <div class="form-check pl-0">
-                                            <div class="custom-control custom-checkbox checkbox-info">
-                                                {{ form.returned }}
-                                                <label  for="gridCheck">Telah Dipulangkan ?</label>
-                                            </div>
+                                    <div class="form-row mb-0">
+                                        <div class="custom-control custom-checkbox checkbox-info">
+                                            {{ form.returned }}
+                                            <label  for="gridCheck">Telah Dipulangkan ?</label>
                                         </div>
                                     </div>
                                     <button type="submit" class="btn btn-primary mt-3">Tambah File</button>
@@ -162,17 +160,14 @@
                     </div>
                 </div>
             </div>
-        <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © 2020 <a target="_blank" href="https://designreset.com/">Lembaga Air Perak</a>, All rights reserved.</p>
-                </div>
-                <div class="footer-section f-section-2">
-                    <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
-                </div>
-            </div>
+    </div>
+    <div class="footer-wrapper">
+        <div class="footer-section f-section-1">
+            <p class="">Copyright © 2020 <a target="_blank" href="https://designreset.com/">Lembaga Air Perak</a>, All rights reserved.</p>
         </div>
-        <!--  END CONTENT AREA  -->
-
+        <div class="footer-section f-section-2">
+            <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
+        </div>
     </div>
     <!-- END MAIN CONTAINER -->
     
