--- a/djangocms/templates/management/editfile.html
+++ b/djangocms/templates/management/editfile.html
@@ -110,70 +110,67 @@
 
 
     <!--  BEGIN CONTENT AREA  -->
-    <div id="content" class="main-content container">
-            <div class="form-content">
-                <div class="row">
-                    <div id="flFormsGrid" class="col-lg-12 layout-spacing">
-                        <div class="statbox widget box box-shadow">
-                            <div class="widget-header">
-                                <div class="row">
-                                    <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                        <h4>Ubah Data ?</h4>
-                                    </div>                                                                        
+    <div id="content" class="main-content layout-px-spacing">
+        <div class="form-content layout-top-spacing layout-spacing">
+            <div class="row">
+                <div id="flFormsGrid" class="col-lg-12 layout-spacing">
+                    <div class="statbox widget box box-shadow">
+                        <div class="widget-header">
+                            <div class="row">
+                                <div class="col-xl-12 col-md-12 col-sm-12 col-12">
+                                    <h4>Ubah Data ?</h4>
+                                </div>                                                                        
+                            </div>
+                        </div>
+                        <div class="widget-content widget-content-area">
+                            <form method="POST" >{% csrf_token %}
+                                <div class="form-row mb-4">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputEmail4">Nama File</label>
+                                        {{ form.file_name }}
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="inputPassword4">Nombor File</label>
+                                        {{ form.file_number }}
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="widget-content widget-content-area">
-                                <form method="POST" >{% csrf_token %}
-                                    <div class="form-row mb-4">
-                                        <div class="form-group col-md-6">
-                                            <label for="inputEmail4">Nama File</label>
-                                            {{ form.file_name }}
-                                        </div>
-                                        <div class="form-group col-md-6">
-                                            <label for="inputPassword4">Nombor File</label>
-                                            {{ form.file_number }}
+                                <div class="form-group mb-4">
+                                    <label for="inputState">Bahagian</label>
+                                    {{ form.department }}
+                                </div>
+                                <div class="form-row mb-4">
+                                    <div class="form-group col-md-6">
+                                        <label for="inputState">Dipertanggungjawab Kepada</label>
+                                        {{ form.assigned_to }}
+                                    </div>
+                                    <div class="form-group col-md-6">
+                                        <label for="assigned_to">Dikeluarkan Pada</label>
+                                        {{ form.checkout_on }}
+                                    </div>
+                                </div>
+                                <div class="form-group">
+                                    <div class="form-check pl-0">
+                                        <div class="custom-control custom-checkbox checkbox-info">
+                                            {{ form.returned }}
+                                            <label  for="gridCheck">Telah Dipulangkan ?</label>
                                         </div>
                                     </div>
-                                    <div class="form-group mb-4">
-                                        <label for="inputState">Bahagian</label>
-                                        {{ form.department }}
-                                    </div>
-                                    <div class="form-row mb-4">
-                                        <div class="form-group col-md-6">
-                                            <label for="inputState">Dipertanggungjawab Kepada</label>
-                                            {{ form.assigned_to }}
-                                        </div>
-                                         <div class="form-group col-md-6">
-                                            <label for="assigned_to">Dikeluarkan Pada</label>
-                                            {{ form.checkout_on }}
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="form-check pl-0">
-                                            <div class="custom-control custom-checkbox checkbox-info">
-                                                {{ form.returned }}
-                                                <label  for="gridCheck">Telah Dipulangkan ?</label>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <button type="submit" class="btn btn-primary mt-3">Selesai</button>
-                                </form>
-                            </div>
+                                </div>
+                                <button type="submit" class="btn btn-primary mt-3">Selesai</button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
-        <div class="footer-wrapper">
-                <div class="footer-section f-section-1">
-                    <p class="">Copyright © 2020 <a target="_blank" href="https://designreset.com/">Lembaga Air Perak</a>, All rights reserved.</p>
-                </div>
-                <div class="footer-section f-section-2">
-                    <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
-                </div>
-            </div>
         </div>
-        <!--  END CONTENT AREA  -->
-
+    </div>
+    <div class="footer-wrapper">
+        <div class="footer-section f-section-1">
+            <p class="">Copyright © 2020 <a target="_blank" href="https://designreset.com/">Lembaga Air Perak</a>, All rights reserved.</p>
+        </div>
+        <div class="footer-section f-section-2">
+            <p class="">Coded with <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg></p>
+        </div>
     </div>
     <!-- END MAIN CONTAINER -->
     
