--- a/djangocms/templates/pages/index.html
+++ b/djangocms/templates/pages/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lembaga Air Perak - Daftar</title>
+    <title>Lembaga Air Perak - Log Masuk</title>
     <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&amp;display=swap" rel="stylesheet">
@@ -15,13 +15,10 @@
     <link href="{% static 'assets/css/plugins.css' %}" rel="stylesheet" type="text/css" />
     <link href="{% static 'assets/css/authentication/form-2.css' %}" rel="stylesheet" type="text/css" />
     <!-- END GLOBAL MANDATORY STYLES -->
-    <link rel="stylesheet" type="text/css" href="assets/css/forms/theme-checkbox-radio.css">
-    <link rel="stylesheet" type="text/css" href="assets/css/forms/switches.css">
-    <link rel="stylesheet" type="text/css" href="{% static 'assets/css/elements/alert.css' %}">
+    <link href="{% static 'assets/css/components/cards/card.css" rel="stylesheet" type="text/css' %}" />
 </head>
-
 <body>
-   <!--  BEGIN NAVBAR  -->
+    <!--  BEGIN NAVBAR  -->
     <div class="header-container">
         <header class="header navbar navbar-expand-sm">
 
@@ -66,60 +63,33 @@
     </div>
     <!--  END NAVBAR  -->
 
+    <!--  START CONTENT  -->
 
-    <div class="form-container outer">
-        
-        <div class="form-form">
-            <div class="form-form-wrap">
-                <div class="form-container">
-                    <div class="form-content">
-
-                        <h1 class="">Daftar Akaun</h1>
-                        <p class="signup-link register">Sudah ada akaun ? <a href="{% url 'login' %}">Log masuk</a></p>
-                        <form action="{% url 'register' %}" method="POST" class="text-left">
-                            {% csrf_token %}
-                            <div class="form">
-                                <div id="username-field" class="field-wrapper input">
-                                    <label for="username">NAMA PENGGUNA</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>
-                                    <input id="username" name="username" type="text" class="form-control" placeholder="Nama Pengguna">
-                                </div>
-
-                                <div id="email-field" class="field-wrapper input">
-                                    <label for="email">EMAIL</label>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-at-sign register"><circle cx="12" cy="12" r="4"></circle><path d="M16 8v5a3 3 0 0 0 6 0v-1a10 10 0 1 0-3.92 7.94"></path></svg>
-                                    <input id="email" name="email" type="text" value="" class="form-control" placeholder="Email">
-                                </div>
-
-                                <div id="password-field" class="field-wrapper input mb-2">
-                                    <div class="d-flex justify-content-between">
-                                        <label for="password">KATA LALUAN</label>
-                                    </div>
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-lock"><rect x="3" y="11" width="18" height="11" rx="2" ry="2"></rect><path d="M7 11V7a5 5 0 0 1 10 0v4"></path></svg>
-                                    <input id="password" name="password" type="password" class="form-control" placeholder="Kata laluan">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" id="toggle-password" class="feather feather-eye"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z"></path><circle cx="12" cy="12" r="3"></circle></svg>
-                                </div>
-
-                                <div class="d-sm-flex justify-content-between">
-                                    <div class="field-wrapper">
-                                        <button type="submit" class="btn btn-primary" value="">Selesai</button>
-                                    </div>
-                                </div>
-
-                                <div class="division">
-                                    <span></span>
-                                </div>
-
-                            </div>
-                        </form>
-
-                    </div>                    
+    <div style="margin: 0; position: absolute; top: 50%; left: 50%; -ms-transform: translate(-50%, -50%); transform: translate(-50%, -50%);">
+        <div class="row" >       
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                <div class="card h-100 component-card_2" style="background : #191e3a;">
+                    <img src="{% static 'assets/img/pentadbiran.jpg' %}" class="card-img-top" alt="widget-card-2">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Bahagian Pentadbiran</h5>
+                        <p class="card-text">Mengandungi rekod dokumen dan file.</p>
+                        <a href="{% url 'login' %}" class="btn btn-primary mt-auto">Log Masuk</a>
+                    </div>
                 </div>
             </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                <div class="card mt-auto h-100 component-card_2" style="background : #191e3a;">
+                    <img src="{% static 'assets/img/makmal.jfif' %}" class="card-img-top" alt="widget-card-2">
+                    <div class="card-body d-flex flex-column">
+                        <h5 class="card-title">Bahagian Makmal</h5>
+                        <p class="card-text">Rekod analisa kualiti air serta penyucian hama Larut Matang dan Selama.</p>
+                        <a href="#" class="btn btn-primary mt-auto">Log Masuk</a>
+                    </div>
+                </div>
+            </div>                    
         </div>
     </div>
-
-    
+   
     <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
     <script src="{% static 'assets/js/libs/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/popper.min.js' %}"></script>
@@ -129,5 +99,4 @@
     <script src="{% static 'assets/js/authentication/form-2.js' %}"></script>
 
 </body>
-
 </html>
