--- a/djangocms/templates/pages/index.html
+++ b/djangocms/templates/pages/index.html
@@ -83,7 +83,7 @@
                     <div class="card-body d-flex flex-column">
                         <h5 class="card-title">Bahagian Makmal</h5>
                         <p class="card-text">Rekod analisa kualiti air serta penyucian hama Larut Matang dan Selama.</p>
-                        <a href="#" class="btn btn-primary mt-auto">Log Masuk</a>
+                        <a href="{% url 'login' %}" class="btn btn-primary mt-auto">Log Masuk</a>
                     </div>
                 </div>
             </div>                    
