--- a/djangocms/templates/makmal/strelise.html
+++ b/djangocms/templates/makmal/strelise.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
-    <title>Lembaga Air Perak - Dashboard</title>
+    <title>Lembaga Air Perak - Rekod Penyucian Hama</title>
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&amp;display=swap" rel="stylesheet">
@@ -31,7 +31,7 @@
             <a href="javascript:void(0);" class="sidebarCollapse" data-placement="bottom"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-menu"><line x1="3" y1="12" x2="21" y2="12"></line><line x1="3" y1="6" x2="21" y2="6"></line><line x1="3" y1="18" x2="21" y2="18"></line></svg></a>
 
             <div class="nav-logo align-self-center">
-                <a class="navbar-brand" href="{% url 'dashboard' %}"><img alt="" src="{% static 'assets/img/logo.png' %}"> <span class="navbar-brand-name">LEMBAGA AIR PERAK - BAHAGIAN PENTADBIRAN</span></a>
+                <a class="navbar-brand" href="{% url 'makmal' %}"><img alt="" src="{% static 'assets/img/logo.png' %}"> <span class="navbar-brand-name">LEMBAGA AIR PERAK - BAHAGIAN MAKMAL</span></a>
             </div>
 
             <ul class="navbar-item flex-row mr-auto">
@@ -85,14 +85,14 @@
                         </a>
                     </li>
                     <li class="nav-item theme-text">
-                        <a href="index-2.html" class="nav-link"> CORK </a>
+                        <a href="index-2.html" class="nav-link"> LAP </a>
                     </li>
                 </ul>
 
                 <ul class="list-unstyled menu-categories" id="topAccordion">
 
                     <li class="menu single-menu active" class=>
-                        <a href="{% url 'dashboard' %}">
+                        <a href="{% url 'makmal' %}">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg>
                                 <span>Home</span>
@@ -102,10 +102,10 @@
 
 
                     <li class="menu single-menu">
-                        <a href="{% url 'addfile' %}">
+                        <a href="{% url 'addreport' %}">
                             <div class="">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
-                                <span>Tambah File Baru</span>
+                                <span>Tambah Rekod Baru</span>
                             </div>
                         </a>
                     </li>
@@ -124,7 +124,7 @@
                             <div class="widget-header">
                                 <div class="row">
                                     <div class="col-xl-12 col-md-12 col-sm-12 col-12">
-                                        <h4>Senarai File Lembaga Air Perak</h4>
+                                        <h4>Senarai Rekod Penyucian Hama LMS</h4>
                                     </div>                  
                                 </div>
                             </div>
@@ -134,32 +134,28 @@
                                         <thead>
                                             <tr>
                                                 <th class="checkbox-column"> Record No. </th>
-                                                <th>Nama File</th>
-                                                <th>Bahagian</th>
-                                                <th>Tindakan Oleh</th>
-                                                <th>Dikeluarkan Pada</th>
-                                                <th>Status</th>
+                                                <th>Nama Projek</th>
+                                                <th>Dilakukan Pada</th>
+                                                <th class="text-center" >Keputusan 1</th>
+                                                <th class="text-center" >Keputusan 2</th>
+                                                <th class="text-center" >Keputusan 3</th>
                                                 <th class="text-center">Action</th>
                                             </tr>
                                         </thead>
                                         <tbody>
-                                            {% for file in files %}
+                                            {% for report in reports %}
                                             <tr>
-                                                <td>{{ file.id }}</td>
-                                                <td>{{ file.file_name|truncatewords:5 }}</td>
-                                                <td>{{ file.department }}</td>
-                                                <td>
-                                                    {% for name in file.assigned_to.all %}
-                                                        {{ name.username }} ,
-                                                    {% endfor %}
-                                                </td>
-                                                <td>{{ file.checkout_on }}</td>
-                                                {% if file.overdue_status %}
-                                                    <td><span class="shadow-none badge badge-danger">Overdue</span></td>
+                                                <td>{{ report.id }}</td>
+                                                <td>{{ report.project_name|truncatewords:5 }}</td>
+                                                <td>{{ report.done_on }}</td>
+                                                <td class="text-center" >{{ report.result_1 }}</td>
+                                                <td class="text-center" >{{ report.result_2 }}</td>
+                                                {% if report.result_3 == None %}
+                                                    <td class="text-center" >-</td>
                                                 {% else %}
-                                                    <td><span class="shadow-none badge badge-primary">Bilik File</span></td>
+                                                    <td class="text-center" >{{ report.result_3 }}</td>
                                                 {% endif %}
-                                                <td class="text-center"><button class="btn btn-primary"><a href="{% url 'editfile' file.id %}">Lebih Lanjut ?</a></button></td>
+                                                <td class="text-center"><button class="btn btn-primary"><a href="{% url 'editreport' report.id %}">Lebih Lanjut ?</a></button></td>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
