--- a/djangocms/lap/static/plugins/table/datatable/custom_dt_custom.css
+++ b/djangocms/lap/static/plugins/table/datatable/custom_dt_custom.css
@@ -57,8 +57,8 @@ table.dataTable {
     border: 2px dashed #1b55e2;
 }
 .style-2 .badge-warning {
-    color: #e2a03f;
-    border: 2px dashed #e2a03f;
+    color: #28a745;
+    border: 2px dashed #28a745;
 }
 .style-2 .badge-danger {
     color: #e7515a;
@@ -90,8 +90,8 @@ table.dataTable {
     border: 2px dashed #1b55e2;
 }
 .style-3 .badge-warning {
-    color: #e2a03f;
-    border: 2px dashed #e2a03f;
+    color: #28a745;
+    border: 2px dashed #28a745;
 }
 .style-3 .badge-danger {
     color: #e7515a;
