--- a/djangocms/templates/account/register.html
+++ b/djangocms/templates/account/register.html
@@ -65,8 +65,9 @@
         </header>
     </div>
     <!--  END NAVBAR  -->
-
-
+    <div class="container">
+    {% include 'partials/_alerts.html'%}
+    </div>
     <div class="form-container outer">
         
         <div class="form-form">
