--- a/djangocms/static/plugins/table/datatable/custom_dt_miscellaneous.css
+++ b/djangocms/static/plugins/table/datatable/custom_dt_miscellaneous.css
@@ -9,8 +9,8 @@
     border: 2px dashed #1b55e2;
 }
 #column-filter .badge-warning {
-    color: #e2a03f;
-    border: 2px dashed #e2a03f;
+    color: #28a745;
+    border: 2px dashed #28a745;
 }
 #column-filter .badge-danger {
     color: #e7515a;
