--- a/djangocms/templates/management/dashboard.html
+++ b/djangocms/templates/management/dashboard.html
@@ -8,7 +8,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, shrink-to-fit=no">
     <title>Lembaga Air Perak - Dashboard</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico"/>
+    <link rel="icon" type="image/x-icon" href="{% static 'assets/img/favicon.ico' %}"/>
     <!-- BEGIN GLOBAL MANDATORY STYLES -->
     <link href="https://fonts.googleapis.com/css?family=Quicksand:400,500,600,700&amp;display=swap" rel="stylesheet">
     <link href="{% static 'bootstrap/css/bootstrap.min.css' %}" rel="stylesheet" type="text/css" />
@@ -20,10 +20,10 @@
     <link rel="stylesheet" type="text/css" href="{% static 'plugins/table/datatable/custom_dt_miscellaneous.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/forms/theme-checkbox-radio.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'plugins/table/datatable/dt-global_style.css' %}">
+    <link href="{% static 'plugins/loaders/custom-loader.css' %}" rel="stylesheet" type="text/css">
     <!-- END PAGE LEVEL STYLES -->
 </head>
 <body class="sidebar-noneoverflow">
-    
     <!--  BEGIN NAVBAR  -->
     <div class="header-container">
         <header class="header navbar navbar-expand-sm">
@@ -68,13 +68,14 @@
         </header>
     </div>
     <!--  END NAVBAR  -->
-
-    <!--  BEGIN MAIN CONTAINER  -->
-    
+    <div class="container">
+        {% include 'partials/_alerts.html'%}
+    </div>
     <div class="main-container" id="container">
         <div class="overlay"></div>
         <div class="search-overlay"></div>
-
+            
+        </div>
         <!--  BEGIN TOPBAR  -->
         <div class="topbar-nav header navbar" role="banner">
             <nav id="topbar">
@@ -104,7 +105,7 @@
                     <li class="menu single-menu">
                         <a href="{% url 'addfile' %}">
                             <div class="">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-box"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"></path><polyline points="3.27 6.96 12 12.01 20.73 6.96"></polyline><line x1="12" y1="22.08" x2="12" y2="12"></line></svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-save"><path d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"/><polyline points="17 21 17 13 7 13 7 21"/><polyline points="7 3 7 8 15 8"/></svg>
                                 <span>Tambah File Baru</span>
                             </div>
                         </a>
@@ -153,13 +154,19 @@
                                                         {{ name.username }} ,
                                                     {% endfor %}
                                                 </td>
-                                                <td>{{ file.checkout_on }}</td>
-                                                {% if file.overdue_status %}
+                                                {% if file.checkout_on == None %}
+                                                    <td class="pl-5"> - </td>
+                                                {% else %}
+                                                    <td>{{ file.checkout_on }}</td>
+                                                {% endif %}
+                                                {% if file.overdue_status == 'returned' %}
+                                                    <td><span class="shadow-none badge badge-primary">Bilik File</span></td>
+                                                {% elif file.overdue_status == 'overdue' %}
                                                     <td><span class="shadow-none badge badge-danger">Overdue</span></td>
                                                 {% else %}
-                                                    <td><span class="shadow-none badge badge-primary">Bilik File</span></td>
+                                                    <td><span class="shadow-none badge badge-warning">Transit</span></td>
                                                 {% endif %}
-                                                <td class="text-center"><button class="btn btn-primary"><a href="{% url 'editfile' file.id %}">Lebih Lanjut ?</a></button></td>
+                                                <td class="text-center"><a href="{% url 'editfile' file.id %}" class="btn btn-primary">Lebih Lanjut ?</a>
                                             </tr>
                                             {% endfor %}
                                         </tbody>
@@ -181,19 +188,14 @@
             </div>
         </div>
         <!--  END CONTENT AREA  -->
-
     </div>
-    <!-- END MAIN CONTAINER -->
-    
-    
-    
+    <!-- END MAIN CONTAINER --> 
     <!-- BEGIN GLOBAL MANDATORY SCRIPTS -->
     <script src="{% static 'assets/js/libs/jquery-3.1.1.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/popper.min.js' %}"></script>
     <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
     <script src="{% static 'plugins/perfect-scrollbar/perfect-scrollbar.min.js' %}"></script>
-    <script src="{% static 'assets/js/app.js' %}"></script>
-    
+    <script src="{% static 'assets/js/app.js' %}"></script>   
     <script>
         $(document).ready(function() {
             App.init();
