--- a/djangocms/templates/partials/_alerts.html
+++ b/djangocms/templates/partials/_alerts.html
@@ -1,13 +1,13 @@
 
 {% if messages %}
     {% for message in messages %}           
-        <div id="message" class='form-container'>
+        <div id="message">
             {% if message.tags == 'error' %}
                 <div class="alert alert-warning mb-4" role="alert">
             {% else %}
                 <div class="alert alert-{{ message.tags }} mb-4" role="alert">
             {% endif %}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><svg> ... </svg></button>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-x close" data-dismiss="alert"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg></button>
                 <strong>
                     {% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}
                         Error: 
